# sfml-practice

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
assets/graphics/: splash_rat.aseprite
assets/shaders/: heat_haze.frag
src/: Aircraft.cpp  Aircraft.hpp  App.cpp  App.hpp  Command.hpp  CommandQueue.cpp  CommandQueue.hpp  Entity.cpp  Entity.hpp  Game.cpp  Game.hpp  GameState.cpp  GameState.hpp  MenuState.cpp  MenuState.hpp  NodeCategories.hpp  PauseState.cpp  PauseState.hpp  Player.cpp  Player.hpp  PlayerInputHandler.cpp  PlayerInputHandler.hpp  ResourceHolder.hpp  ResourceId.hpp  SceneNode.cpp  SceneNode.hpp  SettingsState.cpp  SettingsState.hpp  SpriteNode.cpp  SpriteNode.hpp  State.cpp  State.hpp  StateId.hpp  StateStack.cpp  StateStack.hpp  TitleState.cpp  TitleState.hpp  Util.cpp  Util.hpp  World.cpp  (+3 more)
src/gui/: Button.cpp  Button.hpp  Component.cpp  Component.hpp  Container.cpp  Container.hpp  Label.cpp  Label.hpp
